--- a/index.html
+++ b/index.html
@@ -1,16 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web developer portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
+
 <body>
-    <header></header>
+    <header class="header">
+        <nav>
+            <h3 class="nav-title">Suzon</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn-primery">Hire me</button></a></li>
+            </ul>
+        </nav>
 
-    <main></main>
+        <div class="banner seconder-bg">
+            <div class="banner-containt">
+                <h4 class="banner-greting dark-2">Hi, I am</h4>
+                <h1 class="banner-title dark-1">Mary Hardy</h1>
+                <p class="banner-description dark-3">Shot what able cold new see hold.Friendly as an betrayed formerly
+                    he. Morning because as to society
+                    behaved moments.</p>
+                <button class="btn-primery">Download CV</button>
+                <button class="btn-primery">Contact</button>
 
-    <footer></footer>
-    
+            </div>
+
+            <img class="banner-profile-pic" src="images/hardy.png" alt="">
+        </div>
+    </header>
+
+    <main>
+        <section class="about seconder-bg">
+            <h3 class="secondery-title">About Me</h3>
+            <p class="seconder-description">I, m a designer & developer with a passion for web design. I enjoy
+                developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.</p>
+            <div class="about-items">
+                <div class="about-itme">
+                    <p class="item-title"> Name:Mary</p>
+                    <p class="item-description">Hardy</p>
+                </div>
+                <div class="about-itme">
+                    <p class="item-title">Email:</p>
+                    <p class="item-description">info@gmail.com</p>
+                </div>
+                <div class="about-itme">
+                    <p class="item-title">Date of birth:</p>
+                    <p class="item-description">11 November 1987</p>
+                </div>
+                <div class="about-itme">
+                    <p class="item-title">From:</p>
+                    <p class="item-description">Los Angeles, USA</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- what is do section -->
+
+        <section class="skills">
+            <h3 class="section-title text-center">What I do</h3>
+            <p class="section-description text-center">I have more than 10 years experience building software for
+                clients all over
+                the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
+                find out more about my experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill-title">Vanilla JavaScript</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill-title">React</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill-title">Node.js</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill-title">MongoDB</h4>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- A summary of My Resume -->
+
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="resume-container">
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title dark-3">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title dark-3">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title dark-2">Master in Computer Engineering</h4>
+                        <h5 class="experience-sub-title dark-3">Harvard University / 2015 - 2017</h5>
+                        <div class="experience-description dark-3">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>              
+
+                </div>
+
+                <div class="resume-column">
+                    <h3 class="resume-column-title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience-title">Sr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title">Jr. Font End Developer</h4>
+                        <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>
+                    <hr>
+
+                    <div class="experience">
+                        <h4 class="experience-title">HTML Developer</h4>
+                        <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                        <div class="experience-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </div>
+                    </div>              
+
+                </div>
+            </div>
+            <div class="text-center">
+                <button class="btn-primery resume-download">Download CV</button>
+            </div>
+
+
+        </section>
+
+
+
+
+    </main>
+
+    <footer>
+        
+    </footer>
+
 </body>
+
 </html>
