--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
     </main>
 
     <footer>
-        
+        <div>
+            <button class="btn-primery">visit</button>
+        </div>
     </footer>
 
 </body>
